unity/Scripts/BcsvNative.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int16(IntPtr row, int col, short value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int32(IntPtr row, int col, int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int64(IntPtr row, int col, long value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_float(IntPtr row, int col, float value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_double(IntPtr row, int col, double value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_string(IntPtr row, int col, string value);

        // Row API - Array access
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_bool_array(IntPtr row, int start_col, bool[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint8_array(IntPtr row, int start_col, byte[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint16_array(IntPtr row, int start_col, ushort[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint32_array(IntPtr row, int start_col, uint[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint64_array(IntPtr row, int start_col, ulong[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int8_array(IntPtr row, int start_col, sbyte[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int16_array(IntPtr row, int start_col, short[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int32_array(IntPtr row, int start_col, int[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int64_array(IntPtr row, int start_col, long[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_float_array(IntPtr row, int start_col, float[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_double_array(IntPtr row, int start_col, double[] dst, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_bool_array(IntPtr row, int start_col, bool[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint8_array(IntPtr row, int start_col, byte[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint16_array(IntPtr row, int start_col, ushort[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint32_array(IntPtr row, int start_col, uint[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint64_array(IntPtr row, int start_col, ulong[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int8_array(IntPtr row, int start_col, sbyte[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int16_array(IntPtr row, int start_col, short[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int32_array(IntPtr row, int start_col, int[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int64_array(IntPtr row, int start_col, long[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_float_array(IntPtr row, int start_col, float[] src, UIntPtr count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_double_array(IntPtr row, int start_col, double[] src, UIntPtr count);

        // Error handling
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_last_error();
    }

    /// <summary>
    /// Helper methods for cross-platform filename handling
    /// Provides unified string interface while using platform-specific native calls
    /// </summary>
    internal static class FilenameHelper
    {
        /// <summary>
        /// Get reader filename as string, handling platform differences
        /// </summary>
        internal static string GetReaderFilename(IntPtr reader)
        {
            IntPtr filenamePtr = NativeMethods.bcsv_reader_filename(reader);
            if (filenamePtr == IntPtr.Zero)
                return null;

#if UNITY_STANDALONE_WIN || UNITY_EDITOR_WIN
            // On Windows, convert from wchar_t* to string
            return Marshal.PtrToStringUni(filenamePtr);
#else
            // On POSIX, convert from char* to string
            return Marshal.PtrToStringAnsi(filenamePtr);
#endif
        }

        /// <summary>
        /// Get writer filename as string, handling platform differences
        /// </summary>
        internal static string GetWriterFilename(IntPtr writer)
        {
            IntPtr filenamePtr = NativeMethods.bcsv_writer_filename(writer);
            if (filenamePtr == IntPtr.Zero)
                return null;

#if UNITY_STANDALONE_WIN || UNITY_EDITOR_WIN
            // On Windows, convert from wchar_t* to string
            return Marshal.PtrToStringUni(filenamePtr);
#else
            // On POSIX, convert from char* to string
            return Marshal.PtrToStringAnsi(filenamePtr);
#endif
        }
    }
}